# babygpt

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
bot/: __init__.py  bot.py
bot/filters/: __init__.py  filters.py
bot/handlers/: __init__.py  admin_handlers.py  base_handlers.py  tutor_handlers.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/messages/: __init__.py  messages.py
bot/messages/templates/: any_message.txt  get_help.txt  get_start.txt
bot/middlewares/: __init__.py  authenticate_user.py  register_user.py
bot/services/: db.py  gptapi.py
bot/services/db/: __init__.py  models.py
bot/services/gptapi/: __init__.py  gptapi.py
db/migrations/: env.py
db/migrations/versions/: d3acf869d577_.py
